# GeometryRelationship

./: GeometryRelationship.sln  README.md
GeometryRelationship/: .gitignore  CMakeLists.txt  GeometryRelationship.cpp  GeometryRelationship.vcxproj  GeometryRelationship.vcxproj.filters  Inference.h  Inference.hpp  csvstream.hpp  geometry_feature.h  geometry_object.h  geometry_object.hpp  geometry_parse.hpp
GeometryRelationship/data/: 0515_plane2plane.csv  Contact_0.pcd  geometry_config.csv
GeometryRelationship/include/: Inference.hpp  box_overlap.hpp  csvstream.hpp  geometry_feature.hpp  geometry_object.hpp  geometry_parse.hpp  measure_parse.hpp  pointcloud_log.hpp  scene_graph.hpp
GeometryRelationship/src/: GeometryRelationship.cpp
